--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Document</title>
+    <title>Ropix</title>
 </head>
 <body>
   <header>
@@ -50,7 +50,7 @@
       <div class="bienvenidos"><marquee><h2> 20, 21 y 23 de mayo: ¡6 CUOTAS SIN INTERES + ENVIO GRATIS!</h2></marquee></div>
 </header>
     <main class="main-index">
-        <img class="banner" src="img/Ropix-_1_.webp" alt="">
+        <img class="banner" src="img/Ropix-_1_.webp" alt="banner">
         <h2 >Lo Mas Vendido </h2>
 
         <div class="container">
@@ -82,9 +82,9 @@
         </div>
         <h2>Productos</h2>
         <div class="container2">
-          <a class="foto1" href="pags/productos.html#shorts"><img src="img/ebea053c-8a93-46be-bf42-2ffdab3c1c0a1-c12d1ef8f762b76fbd16748541931016-1024-1024.webp" alt=""></a>
-          <a class="foto2" href="pags/productos.html#remeras"><img src="img/image.png" alt=""></a>
-          <a class="foto3" href="pags/productos.html#buzos"><img src="img/image2.png" alt=""> </a>
+          <a class="foto1" href="pags/productos.html#shorts"><img src="img/ebea053c-8a93-46be-bf42-2ffdab3c1c0a1-c12d1ef8f762b76fbd16748541931016-1024-1024.webp" alt="foto de producto"></a>
+          <a class="foto2" href="pags/productos.html#remeras"><img src="img/image.png" alt="foto de producto"></a>
+          <a class="foto3" href="pags/productos.html#buzos"><img src="img/image2.png" alt="foto de producto"> </a>
           </div>
       
         
